[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topsim"
version = "0.3.0"
description = "Telescope Operations Simulator"
authors = [
    { name = "Ryan Bunney", email = "ryan.bunney@icrar.org" },
]
license = { text = "GNU" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "shadow @ git+https://github.com/myxie/shadow",
    "alabaster>=0.7.12",
    "networkx>=2.6",
    "numpy<2.0.0",
    "pandas>1.3",
    "Sphinx>=2.1.2",
    "simpy>=3.0.11",
    "matplotlib>=3.1.1",
    "coverage>=4.5.4",
    "coveralls>=1.8.2",
    "bokeh>=1.4",
    "nbserverproxy",
    "tables >= 3.7",
    "tqdm",
    "h5py",
    "click"
]

[project.scripts]
topsim = "topsim.cli:cli"

[project.urls]
Homepage = "https://github.com/top-sim/topsim"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs"]
